  
Revision history for Perl module TaskForest

1.31 Fri May 29 2009
o Added support for external dependencies (jobs depending on jobs that are
  in other families.
o Removed the VERSION string from all the .pm files, and moved it to 
  Makefile.PL.  Thils will mean less diffs between versions.
o Got rid of unused code.
o Improved some test cases, to reduce the risk of false test failures.  

1.26 Tue May 19 2009
o There was an unnecessary call to 'use Date::Calc' in Calendar.pm.  I
  didn't notice it, because I have it installed. It is not being used. It
  may cause tests to fail.  I have removed the line. 

1.25 Mon May 18 2009
o TaskForest now supports calendars.  A calendar is a set of rules that
  defines on what days a job may run.  Each rule can may or may not
  conclusively determine whether or not a Family should run today.  The
  rules are evaluated in the order in which they are specified.  The last
  rule that conclusively determines whether of not a Family should run
  wins, in the case of conflicting rules.  If none of the rules is
  conclusive, then the Family will not run today.  You can set rules to
  specify certain dates or ranges of dates, or specific days, like "third
  friday of every month."

o Fixed small bug in REST website where logs were not being displayed for
  jobs that ran earlier today (but yesterday by its family's timezone)

o Added an FAQ section.  

1.24 Sun Apr 26 2009
o This release introduces the concept of tokens.  A token is a new kind of
  dependency.  If a job depends on a token, it must acquire a free token
  before it can run, or wait for another job to release a token after
  completion.  Since there is a finite set of tokens, you can use tokens
  to prevent too many jobs from running at the same time.
  For example, if there are 20 jobs that rely on token T, but only 5
  instances of the token, only a maximum of 5 of those jobs may run at the
  same time.