@@ -7,7 +7,7 @@
 <div class="width6 last">
 
 
-<div class="section_header"><a name="1.31"></a>1.31 Fri May 29 2009</div>
+<div class="section_header"><a name="1.32"></a>1.32 Fri May 29 2009</div>
 <p>
   Enhancements.
 </p>
@@ -25,6 +25,9 @@
   </li>
   <li>
     Improved some test cases, to reduce the risk of false test failures. 
+  </li>
+  <li>
+    Fixed a bug where the last entry of a recurring job was sometimes not run.
   </li>
 </ul>
   
