@@ -46,7 +46,7 @@
   </div>
   <div class="width2 last demarcated">
     <div class="section_header"><a href="/releaseNotes.html">Release Notes</a></div>
-    <a href="/releaseNotes.html#1.31"><b>1.31</b></a> 2009-05-29<br>
+    <a href="/releaseNotes.html#1.32"><b>1.32</b></a> 2009-05-29<br>
     <a href="/releaseNotes.html#1.26"><b>1.26</b></a> 2009-05-19<br>
     <a href="/releaseNotes.html#1.25"><b>1.25</b></a> 2009-05-18<br>
     <a href="/releaseNotes.html#1.24"><b>1.24</b></a> 2009-04-26<br>
@@ -62,7 +62,7 @@
   </div>
   <div class="width2 last demarcated">
     <div class="section_header"><a href="/changes.html">Change Log</a></div>
-    <a href="/changes.html#1.31"><b>1.31</b></a> 2009-05-29<br>
+    <a href="/changes.html#1.32"><b>1.32</b></a> 2009-05-29<br>
     <a href="/changes.html#1.26"><b>1.26</b></a> 2009-05-19<br>
     <a href="/changes.html#1.25"><b>1.25</b></a> 2009-05-18<br>
     <a href="/changes.html#1.24"><b>1.24</b></a> 2009-04-26<br>
