@@ -8,6 +8,8 @@ o Removed the VERSION string from all the .pm files, and moved it to
   Makefile.PL.  Thils will mean less diffs between versions.
 o Got rid of unused code.
 o Improved some test cases, to reduce the risk of false test failures.  
+o Fixed a bug where the last entry of a recurring job was sometimes not
+  run. 
 
 1.26 Tue May 19 2009
 o There was an unnecessary call to 'use Date::Calc' in Calendar.pm.  I
